Estructuración de index.html e implementación de estilos

--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
     <div class="grid-container">
       <header>
         <h1>
-          <img
-       Servicio      src="https://img.freepik.com/fotos-premium/icono-archivo-imagen-ilustracion-procesamiento-3d_567294-3442.jpg?w=740"
-            alt="Logo"
-          />
+          <!-- <img src="https://img.freepik.com/fotos-premium/icono-archivo-imagen-ilustracion-procesamiento-3d_567294-3442.jpg?w=740" alt="Logo"/> -->
+          <img src="./assets/media/img/logo.png" alt="Residencias Atlantico">
         </h1>
         <nav class="navegador-inicio">
           <ul>
@@ -27,72 +25,83 @@
       </header>
       <main>
         <aside class="apartado">
-          <h3>Apartado</h3>
+          <div>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero, placeat.
+          </div>
         </aside>
         <div class="contenido">
-          <section class="seccion inicio" id="inicio">
-            <h3>Inicio</h3>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat
-              eligendi sapiente perspiciatis, dolorem magnam harum natus
-              maiores. Nostrum optio beatae, ratione, nam voluptate debitis
-              repudiandae pariatur necessitatibus ut obcaecati velit?
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci, tenetur aliquam earum, velit sequi commodi ducimus alias neque eos, provident perferendis repellendus a accusantium hic possimus. Molestias sed consequuntur mollitia.
-              Magnam, dignissimos suscipit dolor explicabo eum corrupti recusandae sed molestias consectetur veritatis quos soluta, itaque iusto quibusdam veniam enim est? Non delectus tempora nesciunt similique eius cupiditate quo vel atque.
-            </p>
-          </section>
-          <section class="seccion nosotros" id="nosotros">
-            <h3>Sobre Nosotros</h3>
-            <p>
-              
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci, tenetur aliquam earum, velit sequi commodi ducimus alias neque eos, provident perferendis repellendus a accusantium hic possimus. Molestias sed consequuntur mollitia.
-              Magnam, dignissimos suscipit dolor explicabo eum corrupti recusandae sed molestias consectetur veritatis quos soluta, itaque iusto quibusdam veniam enim est? Non delectus tempora nesciunt similique eius cupiditate quo vel atque.
-              <br><br>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus animi numquam voluptas iure. Cumque placeat sit consequatur architecto a harum ducimus perspiciatis. Fugiat veritatis consequatur fuga provident dolores quam quisquam.
-            </p>
-          </section>
-          <section class="seccion servicios" id="servicios">
-            <h3>Servicios</h3>
-            <ul class="lista-servicios">
-              <li><img src="https://img.freepik.com/vector-gratis/ilustracion-icono-doodle-engranaje_53876-5596.jpg?w=740&t=st=1681696127~exp=1681696727~hmac=c238f9b419e6265685424b4edd8f3b2abb3c0b01b780cb8d4e568e4011a0b0d3" alt="Engranajes"></li>
-              <li><img src="https://img.freepik.com/vector-gratis/ilustracion-icono-doodle-engranaje_53876-5596.jpg?w=740&t=st=1681696127~exp=1681696727~hmac=c238f9b419e6265685424b4edd8f3b2abb3c0b01b780cb8d4e568e4011a0b0d3" alt="Engranajes"></li>
-              <li><img src="https://img.freepik.com/vector-gratis/ilustracion-icono-doodle-engranaje_53876-5596.jpg?w=740&t=st=1681696127~exp=1681696727~hmac=c238f9b419e6265685424b4edd8f3b2abb3c0b01b780cb8d4e568e4011a0b0d3" alt="Engranajes"></li>
-              <li><img src="https://img.freepik.com/vector-gratis/ilustracion-icono-doodle-engranaje_53876-5596.jpg?w=740&t=st=1681696127~exp=1681696727~hmac=c238f9b419e6265685424b4edd8f3b2abb3c0b01b780cb8d4e568e4011a0b0d3" alt="Engranajes"></li>
-              <li><img src="https://img.freepik.com/vector-gratis/ilustracion-icono-doodle-engranaje_53876-5596.jpg?w=740&t=st=1681696127~exp=1681696727~hmac=c238f9b419e6265685424b4edd8f3b2abb3c0b01b780cb8d4e568e4011a0b0d3" alt="Engranajes"></li>
-              <li><img src="https://img.freepik.com/vector-gratis/ilustracion-icono-doodle-engranaje_53876-5596.jpg?w=740&t=st=1681696127~exp=1681696727~hmac=c238f9b419e6265685424b4edd8f3b2abb3c0b01b780cb8d4e568e4011a0b0d3" alt="Engranajes"></li>
-              <li><img src="https://img.freepik.com/vector-gratis/ilustracion-icono-doodle-engranaje_53876-5596.jpg?w=740&t=st=1681696127~exp=1681696727~hmac=c238f9b419e6265685424b4edd8f3b2abb3c0b01b780cb8d4e568e4011a0b0d3" alt="Engranajes"></li>
-              <li><img src="https://img.freepik.com/vector-gratis/ilustracion-icono-doodle-engranaje_53876-5596.jpg?w=740&t=st=1681696127~exp=1681696727~hmac=c238f9b419e6265685424b4edd8f3b2abb3c0b01b780cb8d4e568e4011a0b0d3" alt="Engranajes"></li>
-            </ul>
-          </section>
-          <section class="seccion contacto" id="contacto">
-            <h3>Contacto</h3>
-            <p>
-              <form action="" method="post">
-                <fieldset>
-                  <legend>Datos</legend>
-                  <label for="">Campo 1
-                    <input type="text">
-                  </label>
-                  <label for="">Campo 2
-                    <input type="text">
-                  </label>
-                  <label for="">Campo 3
-                    <input type="text">
-                  </label>
-                  <label for="">Campo 4
-                    <input type="text">
-                  </label>
-                  <label for="">Campo 5
-                    <input type="text">
-                  </label>
-                </fieldset>
-                <fieldset>
-                  <button type="submit">Enviar</button>
-                  <button type="reset">Limpiar</button>
-                </fieldset>
-              </form>
-            </p>
-          </section>
+          <div id="inicio">
+            <section class="seccion inicio">
+              <h2>Inicio</h2>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat
+                eligendi sapiente perspiciatis, dolorem magnam harum natus
+                maiores. Nostrum optio beatae, ratione, nam voluptate debitis
+                repudiandae pariatur necessitatibus ut obcaecati velit?
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci, tenetur aliquam earum, velit sequi commodi ducimus alias neque eos, provident perferendis repellendus a accusantium hic possimus. Molestias sed consequuntur mollitia.
+                Magnam, dignissimos suscipit dolor explicabo eum corrupti recusandae sed molestias consectetur veritatis quos soluta, itaque iusto quibusdam veniam enim est? Non delectus tempora nesciunt similique eius cupiditate quo vel atque.
+              </p>
+            </section>
+          </div>
+          <div id="nosotros">
+            <section class="seccion nosotros">
+              <h2>Sobre Nosotros</h2>
+              <p>
+                
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci, tenetur aliquam earum, velit sequi commodi ducimus alias neque eos, provident perferendis repellendus a accusantium hic possimus. Molestias sed consequuntur mollitia.
+                Magnam, dignissimos suscipit dolor explicabo eum corrupti recusandae sed molestias consectetur veritatis quos soluta, itaque iusto quibusdam veniam enim est? Non delectus tempora nesciunt similique eius cupiditate quo vel atque.
+                <br><br>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus animi numquam voluptas iure. Cumque placeat sit consequatur architecto a harum ducimus perspiciatis. Fugiat veritatis consequatur fuga provident dolores quam quisquam.
+              </p>
+            </section>
+          </div>
+          <div id="servicios">
+            <section class="seccion servicios">
+              <h2>Servicios</h2>
+              <ul class="lista-servicios">
+                <li><img src="https://img.freepik.com/vector-gratis/ilustracion-icono-doodle-engranaje_53876-5596.jpg?w=740&t=st=1681696127~exp=1681696727~hmac=c238f9b419e6265685424b4edd8f3b2abb3c0b01b780cb8d4e568e4011a0b0d3" alt="Engranajes"></li>
+                <li><img src="https://img.freepik.com/vector-gratis/ilustracion-icono-doodle-engranaje_53876-5596.jpg?w=740&t=st=1681696127~exp=1681696727~hmac=c238f9b419e6265685424b4edd8f3b2abb3c0b01b780cb8d4e568e4011a0b0d3" alt="Engranajes"></li>
+                <li><img src="https://img.freepik.com/vector-gratis/ilustracion-icono-doodle-engranaje_53876-5596.jpg?w=740&t=st=1681696127~exp=1681696727~hmac=c238f9b419e6265685424b4edd8f3b2abb3c0b01b780cb8d4e568e4011a0b0d3" alt="Engranajes"></li>
+                <li><img src="https://img.freepik.com/vector-gratis/ilustracion-icono-doodle-engranaje_53876-5596.jpg?w=740&t=st=1681696127~exp=1681696727~hmac=c238f9b419e6265685424b4edd8f3b2abb3c0b01b780cb8d4e568e4011a0b0d3" alt="Engranajes"></li>
+                <li><img src="https://img.freepik.com/vector-gratis/ilustracion-icono-doodle-engranaje_53876-5596.jpg?w=740&t=st=1681696127~exp=1681696727~hmac=c238f9b419e6265685424b4edd8f3b2abb3c0b01b780cb8d4e568e4011a0b0d3" alt="Engranajes"></li>
+                <li><img src="https://img.freepik.com/vector-gratis/ilustracion-icono-doodle-engranaje_53876-5596.jpg?w=740&t=st=1681696127~exp=1681696727~hmac=c238f9b419e6265685424b4edd8f3b2abb3c0b01b780cb8d4e568e4011a0b0d3" alt="Engranajes"></li>
+                <li><img src="https://img.freepik.com/vector-gratis/ilustracion-icono-doodle-engranaje_53876-5596.jpg?w=740&t=st=1681696127~exp=1681696727~hmac=c238f9b419e6265685424b4edd8f3b2abb3c0b01b780cb8d4e568e4011a0b0d3" alt="Engranajes"></li>
+                <li><img src="https://img.freepik.com/vector-gratis/ilustracion-icono-doodle-engranaje_53876-5596.jpg?w=740&t=st=1681696127~exp=1681696727~hmac=c238f9b419e6265685424b4edd8f3b2abb3c0b01b780cb8d4e568e4011a0b0d3" alt="Engranajes"></li>
+              </ul>
+            </section>
+          </div>
+          <div  id="contacto">
+            <section class="seccion contacto">
+              <h2>Contacto</h2>
+              <p>
+                <form action="" method="post">
+                  <fieldset>
+                    <legend>Datos</legend>
+                    <label for="">Campo 1
+                      <input type="text">
+                    </label>
+                    <label for="">Campo 2
+                      <input type="text">
+                    </label>
+                    <label for="">Campo 3
+                      <input type="text">
+                    </label>
+                    <label for="">Campo 4
+                      <input type="text">
+                    </label>
+                    <label for="">Campo 5
+                      <input type="text">
+                    </label>
+                  </fieldset>
+                  <fieldset>
+                    <button type="submit">Enviar</button>
+                    <button type="reset">Limpiar</button>
+                  </fieldset>
+                </form>
+              </p>
+            </section>
+          </div>
+          <span class="whatsapp-icon"><a href="https://web.whatsapp.com/" target="_blank"><img src="./assets/media/img/whatsapp-icon.png" alt="Ir a Whatsapp"></a></span>
         </div>
       </main>
       <footer>
