--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
               <h2>Sobre Nosotros</h2>
               <p>
                 
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci, tenetur aliquam earum, velit sequi commodi ducimus alias neque eos, provident perferendis repellendus a accusantium hic possimus. Molestias sed consequuntur mollitia.
-                Magnam, dignissimos suscipit dolor explicabo eum corrupti recusandae sed molestias consectetur veritatis quos soluta, itaque iusto quibusdam veniam enim est? Non delectus tempora nesciunt similique eius cupiditate quo vel atque.
-                <br><br>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus animi numquam voluptas iure. Cumque placeat sit consequatur architecto a harum ducimus perspiciatis. Fugiat veritatis consequatur fuga provident dolores quam quisquam.
+               Bienvenido/a a la Residencia de Estudiantes “Atlántico”. 
+               En nuestra residencia encontraras un ambiente acogedor y seguro para estudiantes universitarios y de posgrado. 
+               Nos encontramos en el corazón de la ciudad, en una ubicación privilegiada que te permitirá acceder fácilmente a las principales universidades, centros culturales, deportivos y de entrenamiento. 
+
               </p>
             </section>
           </div>
